Fix cancel operation for example "Application"

On the save dialog the cancel option is detected now from exec()
method.

Change-Id: I977626b83fe770ddc148b57551becd04e5fd9dd5
Task-number: QTBUG-41020
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>